class BrickList(list):
    def draw(self):
        pass