class Player:
    def update(self):
        pass