from .vector import Vector2D
from typing import Self



class Rectangle:
    """A basic rectangle class"""
    def __init__(
        self,
        position: Vector2D,
        size: tuple[int, int]
    ) -> Self:
        self.position = position
        self.size = size


    def collide():
        pass


    def draw():
        pass